--- a/src/GestioneSagre.Models/GestioneSagre.Models.csproj
+++ b/src/GestioneSagre.Models/GestioneSagre.Models.csproj
@@ -1,39 +1,43 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>disable</Nullable>
+    </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetFrameworks>net6.0</TargetFrameworks>
-    <Description>GestioneSagre Models components</Description>
-    <PackageTags>gestione sagre models csharp net netcore web opensource</PackageTags>
-    <PackageIcon>Library.png</PackageIcon>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/GestioneSagre/GestioneSagre.Models</RepositoryUrl>
-    <RepositoryBranch>master</RepositoryBranch>
-  </PropertyGroup>
-  
-  <ItemGroup>
-    <None Include="..\..\Library.png">
-	    <Pack>True</Pack>
-	    <PackagePath></PackagePath>
-    </None>
-    <None Include="..\..\README.md" Pack="true" PackagePath="\" />
-    <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
-  </ItemGroup>
+    <PropertyGroup>
+        <TargetFrameworks>net6.0</TargetFrameworks>
+        <Authors>Angelo Pirola</Authors>
+        <Company>Gestione Sagre</Company>
+        <Product>Gestione Sagre Models</Product>
+        <Title>Gestione Sagre Models</Title>
+        <Description>GestioneSagre Models components</Description>
+        <PackageTags>gestione sagre models csharp net netcore web opensource</PackageTags>
+        <PackageIcon>Library.png</PackageIcon>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/GestioneSagre/GestioneSagre.Models</RepositoryUrl>
+        <RepositoryBranch>master</RepositoryBranch>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="GestioneSagre.Infrastructure" Version="1.0.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.5.107">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\Library.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="..\..\README.md" Pack="true" PackagePath="\" />
+        <None Include="..\..\LICENSE" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="GestioneSagre.Infrastructure" Version="1.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+        <PackageReference Include="Nerdbank.GitVersioning" Version="3.5.107">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+    </ItemGroup>
 
 </Project>
