--- a/src/GestioneSagre.Models/GestioneSagre.Models.csproj
+++ b/src/GestioneSagre.Models/GestioneSagre.Models.csproj
@@ -32,8 +32,8 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="GestioneSagre.BaseLibrary" Version="1.0.7" />
         <PackageReference Include="GestioneSagre.Infrastructure" Version="1.0.7" />
-        <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
         <PackageReference Include="Nerdbank.GitVersioning" Version="3.5.108">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
