--- a/src/GestioneSagre.Models/GestioneSagre.Models.csproj
+++ b/src/GestioneSagre.Models/GestioneSagre.Models.csproj
@@ -33,12 +33,16 @@
 
     <ItemGroup>
         <PackageReference Include="GestioneSagre.BaseLibrary" Version="1.0.14" />
-        <PackageReference Include="GestioneSagre.Infrastructure" Version="1.0.7" />
+        <PackageReference Include="GestioneSagre.Infrastructure" Version="1.0.8" />
         <PackageReference Include="MailKit" Version="3.3.0" />
         <PackageReference Include="Nerdbank.GitVersioning" Version="3.5.108">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="InputModels\Categorie\" />
     </ItemGroup>
 
 </Project>
